--- a/deploy/docker-compose.yaml
+++ b/deploy/docker-compose.yaml
@@ -38,6 +38,26 @@ services:
       timeout: 5s
       retries: 3
 
+  redis:
+    image: "redis:latest"
+    container_name: redis
+    ports:
+      - "6379:6379"
+
+
+  rabbitmq:
+    image: "rabbitmq:3-management"
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    environment:
+      RABBITMQ_DEFAULT_USER: ${RABBITMQ_DEFAULT_USER:-guest}
+      RABBITMQ_DEFAULT_PASS: ${RABBITMQ_DEFAULT_PASS:-guest}
+    healthcheck:
+      test: ["CMD", "rabbitmqctl", "status"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
 
   policy-enforcement-service:
     build:
@@ -86,3 +106,14 @@ services:
     environment:
       PG_ASYNC_DSN: ${PG_ASYNC_DSN}
 
+  analytics-service:
+    build:
+      context: ../services/analytics_service
+      dockerfile: ./Dockerfile
+    ports:
+      - "5003:5003"
+    depends_on:
+      postgresql:
+        condition: service_healthy
+    environment:
+      PG_ASYNC_DSN: ${PG_ASYNC_DSN}
