--- a/services/User_Service/requirements.txt
+++ b/services/User_Service/requirements.txt
@@ -41,6 +41,7 @@ python-dotenv==1.1.0
 python-jose==3.4.0
 python-multipart==0.0.20
 PyYAML==6.0.2
+redis==6.0.0
 rsa==4.9.1
 s3transfer==0.11.4
 simpleeval==1.0.3
